...

  @override
  Widget build(BuildContext context) {
    return CupertinoPageScaffold(
      navigationBar: const CupertinoNavigationBar(
        previousPageTitle: 'Users',
        middle: Text('Reputation history'),
      ),
      child: SafeArea(
        child: Consumer<AppService>(
          builder: (context, service, _) {
            final user = service.appData.cachedUsers[userId];
            return PagedWidget(
...
